# square_database

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-build-publish.yaml  pypi-publish.yaml  pytest.yaml
square_database/: configuration.py  create_database.py  main.py  messages.py
square_database/data/: config.ini  config.sample.ini  config.testing.ini  config.testing.sample.ini
square_database/models/: core.py
square_database/pydantic_models/: pydantic_models.py
square_database/routes/: core.py
square_database/utils/: CommonOperations.py  common_operations.py
square_database/utils/routes/: core.py
tests/: conftest.py  test_1.py  test_failures.py  test_main.py
