[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_database"
version = "3.3.2"
description = "database layer for my personal server."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_database" }
keywords = ["database", "crud"]
dependencies = [
    "sqlalchemy>=2.0.23",
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "square_logger>=3.0.1",
    "square_commons>=2.1.0",
    "pydantic>=2.9.2",
]
optional-dependencies = { all = [
    "square_database_structure>=2.5.9",
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1", ], dev = ["pytest>=8.0.0",
    "pytest-cov>=6.2.1", ], square = ["square_database_structure>=2.6.0", ] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI",
]

[tool.hatch.build.targets.wheel]
packages = ["square_database"]